# LaboFriend

./: .gitignore  package-lock.json  readme.md
.github/workflows/: integration.yaml  lint-template.yaml  test_template.yaml
backend/: .env  .gitignore  Dockerfile  Insert Data.sql  Tablas.sql  api.py  pyproject.toml  requirements.txt  salida_prueba.txt
backend/src/: .gitignore
backend/src/api/: app.py  routes.py
backend/src/api/routers/: agenda.py  bloques.py  equipo.py  incidencia.py  investigaciones.py  microorganismos.py  producto_en_sala.py  productos.py  salas.py  trabajando.py  usuarios.py
backend/src/core/: bloques.py  investigacion.py  methods.py  microorganismos.py  productos.py  salas.py  userValidation.py
backend/src/database/: .env  dbconfig.py  models.py
backend/src/view/: app.py  routes.py
backend/tests/integration/: test_agenda.py  test_bloques.py  test_equipo.py  test_investigacion.py  test_microorganismos.py  test_producto.py  test_salas.py  test_trabajando.py  test_user.py
backend/tests/unit/: test_bloques.py  test_salas.py
frontend/: package-lock.json  package.json  pyproject.toml
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/ComponentesGlobales/: Home.js  Login.js  login.css
frontend/src/EstilosGlobales/: basicos.css  sidebar.css  sidebarinvestigaciones.css
frontend/src/Rutas/: AnimatedRoutes.js  AppRoutes.js
frontend/src/api_service/: agenda_api.js  bloque_api.js  equipo_api.js  inventario_api.js  investigaciones_api.js  microorganismo_api.js  salas_api.js  user_api.js
(+139 files in other folders)
