[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
fastapi = "^0.104.0"
supabase = "^1.2.0"
prometheus_fastapi_instrumentator = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


